--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
 /* =============== Global =============== */
 
 :root{
-    --green-gradient: linear-gradient(to bottom, #47ad76, #40c27d);
+    --green-gradient: linear-gradient(to bottom, #40c27d, #47ad76);
+    --green-pattern: #47ad76;
+    --gray: #525252;
+    --gray2: #f3f3f3;
+    --gray3: #ddd;
+    --bg-light: #faf9f9;
+
 }
 
 *{
@@ -12,15 +18,50 @@
 
 body{
     overflow-x: hidden;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .container{
-    width: min(90vw, 800vw);
+    width: min(90vw, 900px);
+    margin: auto;
 }
 
 /* =============== Titles =============== */
+p{
+    line-height: 1.75rem;
+}
+
+h1, h2, h3, h4{
+    text-transform: uppercase;
+}
+
+h1, h2, .box-light, .buttons a{
+    color: var(--gray)
+}
 
 /* =============== Buttons & Links =============== */
+a{
+    text-decoration: none;
+}
+
+.buttons{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 1.5rem;
+}
+
+.button{
+    border: 2px solid var(--gray);
+    padding: 1.25rem 2.5rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.button i, .button span{
+    text-transform: uppercase;
+    font-weight: 600;
+}
 
 /* =============== Header =============== */
 nav{
@@ -29,10 +70,198 @@ nav{
 
 .menu{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    height: 7rem;
 }
 
-/* =============== Titles =============== */
+ul{
+    display: flex;
+    list-style: none;
+}
+
+.menu-left ul{
+    gap: 3rem;
+}
+
+.menu-left ul li a{
+    color: #fff;
+}
+
+.menu-right ul li{
+    padding-left: 1rem !important;
+} 
+
+.menu-right a{
+    background: #fff;
+    color: var(--green-pattern);
+    padding: 2px 9px;
+    border-radius: 50%;
+}
+
+.menu-right i{
+    font-size: .8rem;
+}
+
+/* =============== Banner =============== */
+
+.banner{
+    background: url("../img/banner.png");
+    background-size: cover;
+    padding: 11.25rem 0;
+    display: flex;
+}
+
+.info-banner{
+    float: left;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+    padding-left: 4rem;
+    color: var(--gray);
+}
+
+.title-banner h1{
+    font-size: 2.125rem;
+}
+
+.description-banner p{
+    width: 63%
+}
+
+/* =============== Footer Banner =============== */
+
+.footer-banner{
+    background: var(--gray2)
+}
+
+.info-footer-banner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 1.75rem 0;
+}
+
+.info-footer-banner img{
+    width: 100%;
+}
+
+/* =============== Sections =============== */
+
+section, footer{
+    padding: 6.25rem 0;
+}
+
+.box-light{
+    background: var(--bg-light)
+}
+
+.box-section-1{
+    display: flex;
+    justify-content: space-between;
+    gap: 10rem;
+}
+
+.box-section-info{
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem
+}
+
+.features-box-1{
+    display: flex;
+    flex-direction: column;
+    gap: 1.563rem;
+}
+
+.feature{
+    display: flex;
+    gap: 1.8rem;
+}
+
+.feature span{
+    font-weight: 600;
+}
+
+.section-green{
+    background: var(--green-gradient);
+    color: #fff;
+}
+
+.box-section-2{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5rem;
+}
+
+.item-section-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    gap: 2rem;
+    text-align: center;
+}
+
+.box-section-3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 2.8rem;
+    gap: 3rem;
+    text-align: center;
+}
+
+.box-section-4{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    gap: 3rem;
+}
+
+.box-section-4 p{
+    font-size: 20px
+}
+
+.box-section i{
+    position: relative;
+    top: 0;
+}
+
+input[type=email]{
+    padding: 1.25rem;
+    color: var(--green-pattern);
+    font-size: 1rem;
+    border: none;
+    width: 40%;
+    border-radius: 2px;
+    outline: none;
+}
+
+/* =============== Footer =============== */
+
+.box-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.box-so{
+    display: flex;
+    gap: 4rem;
+}
+
+.box-so i{
+    font-size: 2.5rem;
+}
+
+.box-so a{
+    color: var(--gray3)
+}
 
 /* =============== Titles =============== */
 
