--- a/css/style.css
+++ b/css/style.css
@@ -42,22 +42,35 @@ h1, h2, .box-light, .buttons a{
 /* =============== Buttons & Links =============== */
 a{
     text-decoration: none;
+    opacity: .7;
+    transition: all ease .3s;
+}
+
+a:hover{
+    opacity: 1;
 }
 
 .buttons{
     display: flex;
-    align-items: center;
-    justify-content: start;
     gap: 1.5rem;
+    align-items: center;
 }
 
-.button{
+a.button{
     border: 2px solid var(--gray);
     padding: 1.25rem 2.5rem;
     display: flex;
     align-items: center;
     gap: 1rem;
+    transition: all ease .3s;
 }
+
+a.button:hover{
+    background: var(--gray);
+    color: #fff;
+}
+
+.button
 .button i, .button span{
     text-transform: uppercase;
     font-weight: 600;
@@ -89,7 +102,7 @@ ul{
 }
 
 .menu-right ul li{
-    padding-left: 1rem !important;
+    padding-left: 1rem;
 } 
 
 .menu-right a{
@@ -230,14 +243,31 @@ section, footer{
     top: 0;
 }
 
-input[type=email]{
+form{
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+form .input-email{
     padding: 1.25rem;
-    color: var(--green-pattern);
-    font-size: 1rem;
     border: none;
-    width: 40%;
+    width: min(400px, 80vw);
+    margin: auto;
     border-radius: 2px;
     outline: none;
+}
+
+.input-email::-webkit-input-placeholder{
+    color: var(--green-pattern);
+    font-size: 1rem;
+}
+
+form i{
+    color: var(--green-pattern);
+    font-size: 1.2rem;
+    position: relative;
+    left: -280px;
 }
 
 /* =============== Footer =============== */
@@ -270,4 +300,28 @@ input[type=email]{
 /* =============== Titles =============== */
 
 
+
+@media (max-width: 575.98px) { 
+    .container{
+        width: min(90vw, 900px);
+        margin: auto;
+    }
+
+    .info-banner{
+        padding-left: 0;
+    }
+    .buttons{
+        display: flex;
+        gap: 1.5rem;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+ }
+/* 
+@media (max-width: 767.98px) { ... }
+
+@media (max-width: 991.98px) { ... }
+
+@media (max-width: 1199.98px) { ... }
+ */
 
