--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ a:hover{
 .buttons{
     display: flex;
     gap: 1.5rem;
+    -ms-gap: 1.5rem;
+    -moz-gap: 1.5rem;
     align-items: center;
 }
 
@@ -62,6 +64,8 @@ a.button{
     display: flex;
     align-items: center;
     gap: 1rem;
+    -ms-gap: 1rem;
+    -moz-gap: 1rem;
     transition: all ease .3s;
 }
 
@@ -99,6 +103,8 @@ ul{
 
 .menu-left ul{
     gap: 3rem;
+    -ms-gap: 3rem;
+    -moz-gap: 3rem;
 }
 
 .menu-left ul li a{
@@ -134,6 +140,8 @@ ul{
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    -ms-gap: 2.5rem;
+    -moz-gap: 2.5rem;
     padding-left: 4rem;
     color: var(--gray);
 }
@@ -157,6 +165,8 @@ ul{
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
+    -ms-gap: 1rem;
+    -moz-gap: 1rem;
     padding: 1.75rem 0;
 }
 
@@ -178,23 +188,31 @@ section, footer{
     display: flex;
     justify-content: space-between;
     gap: 10rem;
+    -ms-gap: 10rem;
+    -moz-gap: 10rem;
 }
 
 .box-section-info{
     display: flex;
     flex-direction: column;
-    gap: 2.5rem
+    gap: 2.5rem;
+    -ms-gap: 2.5rem;
+    -moz-gap: 2.5rem;
 }
 
 .features-box-1{
     display: flex;
     flex-direction: column;
     gap: 1.563rem;
+    -ms-gap: 1.563rem;
+    -moz-gap: 1.563rem;
 }
 
 .feature{
     display: flex;
     gap: 1.8rem;
+    -ms-gap: 1.8rem;
+    -moz-gap: 1.8rem;
 }
 
 .feature span{
@@ -210,6 +228,8 @@ section, footer{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5rem;
+    -ms-gap: 5rem;
+    -moz-gap: 5rem;
 }
 
 .item-section-2{
@@ -218,6 +238,8 @@ section, footer{
     align-items: center;
     justify-content:center;
     gap: 2rem;
+    -ms-gap: 2rem;
+    -moz-gap: 2rem;
     text-align: center;
 }
 
@@ -227,6 +249,8 @@ section, footer{
     align-items: center;
     padding: 0 2.8rem;
     gap: 3rem;
+    -ms-gap: 3rem;
+    -moz-gap: 3rem;
     text-align: center;
 }
 
@@ -236,6 +260,8 @@ section, footer{
     align-items: center;
     justify-content:center;
     gap: 3rem;
+    -ms-gap: 3rem;
+    -moz-gap: 3rem;
 }
 
 .box-section-4 p{
@@ -282,11 +308,15 @@ form i{
     align-items: center;
     flex-direction: column;
     gap: 4rem;
+    -ms-gap: 4rem;
+    -moz-gap: 4rem;
 }
 
 .box-so{
     display: flex;
     gap: 4rem;
+    -ms-gap: 4rem;
+    -moz-gap: 4rem;
 }
 
 .box-so i{
