--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ a:hover{
 .buttons{
     display: flex;
     gap: 1.5rem;
+    -webkit-gap: 1.5rem;
     -ms-gap: 1.5rem;
     -moz-gap: 1.5rem;
     align-items: center;
@@ -64,6 +65,7 @@ a.button{
     display: flex;
     align-items: center;
     gap: 1rem;
+    -webkit-gap: 1rem;
     -ms-gap: 1rem;
     -moz-gap: 1rem;
     transition: all ease .3s;
@@ -103,6 +105,7 @@ ul{
 
 .menu-left ul{
     gap: 3rem;
+    -webkit-gap: 3rem;
     -ms-gap: 3rem;
     -moz-gap: 3rem;
 }
@@ -140,6 +143,7 @@ ul{
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    -webkit-gap: 2.5rem;
     -ms-gap: 2.5rem;
     -moz-gap: 2.5rem;
     padding-left: 4rem;
@@ -165,6 +169,7 @@ ul{
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
+    -webkit-gap: 1rem;
     -ms-gap: 1rem;
     -moz-gap: 1rem;
     padding: 1.75rem 0;
@@ -188,6 +193,7 @@ section, footer{
     display: flex;
     justify-content: space-between;
     gap: 10rem;
+    -webkit-gap: 10rem;
     -ms-gap: 10rem;
     -moz-gap: 10rem;
 }
@@ -196,6 +202,7 @@ section, footer{
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    -webkit-gap: 2.5rem;
     -ms-gap: 2.5rem;
     -moz-gap: 2.5rem;
 }
@@ -204,6 +211,7 @@ section, footer{
     display: flex;
     flex-direction: column;
     gap: 1.563rem;
+    -webkit-gap: 1.563rem;
     -ms-gap: 1.563rem;
     -moz-gap: 1.563rem;
 }
@@ -211,6 +219,7 @@ section, footer{
 .feature{
     display: flex;
     gap: 1.8rem;
+    -webkit-gap: 1.8rem;
     -ms-gap: 1.8rem;
     -moz-gap: 1.8rem;
 }
@@ -228,6 +237,7 @@ section, footer{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5rem;
+    -webkit-gap: 5rem;
     -ms-gap: 5rem;
     -moz-gap: 5rem;
 }
@@ -238,6 +248,7 @@ section, footer{
     align-items: center;
     justify-content:center;
     gap: 2rem;
+    -webkit-gap: 2rem;
     -ms-gap: 2rem;
     -moz-gap: 2rem;
     text-align: center;
@@ -249,6 +260,7 @@ section, footer{
     align-items: center;
     padding: 0 2.8rem;
     gap: 3rem;
+    -webkit-gap: 3rem;
     -ms-gap: 3rem;
     -moz-gap: 3rem;
     text-align: center;
@@ -260,6 +272,7 @@ section, footer{
     align-items: center;
     justify-content:center;
     gap: 3rem;
+    -webkit-gap: 3rem;
     -ms-gap: 3rem;
     -moz-gap: 3rem;
 }
@@ -308,6 +321,8 @@ form i{
     align-items: center;
     flex-direction: column;
     gap: 4rem;
+    gap: 4rem;
+    -webkit-gap: 4rem;
     -ms-gap: 4rem;
     -moz-gap: 4rem;
 }
@@ -315,6 +330,7 @@ form i{
 .box-so{
     display: flex;
     gap: 4rem;
+    -webkit-gap: 4rem;
     -ms-gap: 4rem;
     -moz-gap: 4rem;
 }
