--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -28,10 +28,9 @@ footer {
 .feature {
   display: flex;
   gap: 1.8rem;
-}
-
-.feature span {
-  font-weight: 600;
+  span {
+    font-weight: 600;
+  }
 }
 
 .section-green {
@@ -60,10 +59,9 @@ footer {
 
 .box-section-4 {
   gap: 3rem;
-}
-
-.box-section-4 p {
-  font-size: 20px;
+  p{
+    font-size: 20px;
+  }
 }
 
 .box-section i {
