--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -5,12 +5,10 @@
 .box-so {
   display: flex;
   gap: 4rem;
-}
-
-.box-so i {
-  font-size: 2.5rem;
-}
-
-.box-so a {
-  color: $gray3;
+  i {
+    font-size: 2.5rem;
+  }
+  a {
+    color: $gray3;
+  }
 }
